[package]
name = "fixedstr"
version = "0.4.6"
authors = ["Chuck Liang"]
edition = "2021"
license = "MIT"
description = "strings of constant maximum size that can be copied and stack allocated using const generics"
repository = "https://github.com/chuckcscccl/fixedstr/"
keywords = ["string","no-std"]


[features]
default = ["std", "flex-str", "shared-str"]
serde=["dep:serde"]
std=[]
pub_tstr=[]
pub-tstr=["pub_tstr"]
shared-str=[]
flex-str=[]
circular-str=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1", optional=true, default-features=false}

[package.metadata.docs.rs]
#rustdoc-args = ["--document-private-items"]
features = ["serde","circular-str","pub-tstr"]


#sp-io = "23.0.0"

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"
