[package]
name = "fixedstr"
version = "0.5.0"
authors = ["Chuck Liang"]
edition = "2021"
license = "MIT"
description = "strings of constant maximum size that can be copied and stack allocated using const generics"
repository = "https://github.com/chuckcscccl/fixedstr/"
keywords = ["string","no-std"]


[features]
default = []
#default = ["std", "flex-str", "shared-str"]
serde=["dep:serde"]
std=[]
fstr = ["std"]
pub_tstr=[]
pub-tstr=["pub_tstr"]
shared-str=[]
flex-str=[]
circular-str=[]
experimental=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1", optional=true, default-features=false}

[package.metadata.docs.rs]
features = ["serde","pub-tstr","circular-str","flex-str","shared-str","std"]
#all-features = true

#sp-io = "23.0.0"

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"
